<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, CalculatorActivity!</string>
    <string name="app_name">Calculator With Ticker Tape</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="nine">9</string>
    <string name="q1">\?</string>
    <string name="eight">8</string>
    <string name="q2">\?</string>
    <string name="q3">\?</string>
    <string name="seven">7</string>
    <string name="plusminus">+/-</string>
    <string name="clear">C</string>
    <string name="Delete">del</string>
    <string name="negative">-</string>
    <string name="reset_log">Reset Log</string>

</resources>