<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom|right"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:background="@drawable/scroll_view_shape"
        android:layout_margin="2dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip"
        android:layout_height="0dip" >
        <LinearLayout
            android:id="@+id/previousOperations"
            android:orientation="vertical" 
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:paddingBottom="2dip">
        </LinearLayout>
    </ScrollView>
   
       <EditText
        android:id="@+id/currentOperation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:editable="false"
        android:gravity="right"
        android:paddingTop="1dip"
        android:paddingBottom="1dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:background="@drawable/current_entry_shape"
        android:textColor="#D7D7D7"
        android:textSize="30dip"
        android:layout_margin="2dip"
   		/>
       
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
       <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false" >

            <Button
                android:id="@+id/button_clear"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:padding="1dip"
                android:text="@string/clear"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:textSize="30dip" />

            <Button
                android:id="@+id/button_neg"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/negative" />

            <Button
                android:id="@+id/button_delete"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/Delete" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/divide" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_seven"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/seven"/>

            <Button
                android:id="@+id/button_eight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/eight"/>

            <Button
                android:id="@+id/button_nine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button_multiply"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/multiply" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_four"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/four" />

            <Button
                android:id="@+id/button_five"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/five" />

            <Button
                android:id="@+id/button_six"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/six" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/minus" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_one"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/one" />

            <Button
                android:id="@+id/button_two"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/two" />

            <Button
                android:id="@+id/button_three"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/three" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/plus" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button_zero"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="2"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_marginTop="2dip"
                android:layout_marginBottom="2dip"
                android:layout_marginLeft="4dip"
                android:layout_marginRight="4dip"
                android:text="@string/zero" />

            <Button
                android:id="@+id/button_decimal"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/decimal" />

            <Button
                android:id="@+id/button_equal"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="30dip"
                android:padding="1dip"
                android:layout_weight="1"
                android:onClick="button_onClick"
                android:textColor="#C0C0C0"
                android:background="@drawable/button_shape"
                android:layout_margin="2dip"
                android:text="@string/equal" />

        </TableRow>
    </TableLayout>

</LinearLayout>